First working version

--- a/game-over.html
+++ b/game-over.html
@@ -18,24 +18,11 @@
 
   <div class="container">
 
-    <h1>Guess the character!</h1>
-    
-    <h1 id="lettersGuessed"> - </h1>
+    <h1>Game over!</h1>
 
-    <h2>Press any letter on your keyboard! So far you have tried:</h2>
-
-    <h2 id = "lettersTried"> ... </h2>
-
-    <br>
-
-    <h2>Attempts left:</h2>
-
-    <h2 id = "guessesLeft"> 10 </h2>
+    <h2><a href="index.html">Click here</a> to try again</h2>
 
   </div>
-
-  <script type="text/javascript" src="./assets/javascript/game.js">
-  </script>
 
 </body>
 
