Some small tweaks

--- a/index.html
+++ b/index.html
@@ -18,19 +18,25 @@
 
   <div class="container">
 
-    <h1>Guess the character!</h1>
+    <h1>Back to the Future - Guess the character!</h1>
     
     <h1 id="lettersGuessed"> - </h1>
 
-    <h2>Press any letter on your keyboard! So far you have tried:</h2>
-
-    <h2 id = "lettersTried"> ... </h2>
-
     <br>
+
+    <h2>Press any letter on your keyboard!</h2>
 
     <h2>Attempts left:</h2>
 
-    <h2 id = "guessesLeft"> 10 </h2>
+    <h2 id = "guessesLeft"> ... </h2>
+
+  </div>
+
+  <div class="footer">
+
+    <h2>So far you have tried...</h2>
+
+    <h2 id = "lettersTried"> ... </h2>
 
   </div>
 
