--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 
     <br>
 
-    <h2>Press any letter on your keyboard!</h2>
+    <h2>Press any letter on your keyboard</h2>
 
-    <h2>Attempts left:</h2>
+    <br>
 
     <h2 id = "guessesLeft"> ... </h2>
+
+    <h2 id = "totalWins"> ... </h2>
 
   </div>
 
   <div class="footer">
-
-    <h2>So far you have tried...</h2>
 
     <h2 id = "lettersTried"> ... </h2>
 
