Added placeholder if no wins yet

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <h2 id = "guessesLeft"> ... </h2>
 
-    <h2 id = "totalWins"> ... </h2>
+    <h2 id = "totalWins">WINS : 0</h2>
 
   </div>
 
