Small bug fixes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <br>
 
-    <h2>Press any letter on your keyboard</h2>
+    <h2>Press any letter on your keyboard to play</h2>
 
     <br>
 
