Now using Sweet Alert instead of regular alerts

--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
+
 <html lang="en-us">
 
 <head>
+
   <!-- Setting page title -->
   <title>Back-to-the-Future Guess Game, by Stefano Picker</title>
   <!-- Establishing character set -->
   <meta charset="UTF-8">
-  <!-- Linking CSS and font -->
+  <!-- Linking CSS -->
   <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+  <!-- Linking Google font -->
   <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+  <!-- Linking Sweet Alert script -->
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
 </head>
 
 <body>
@@ -40,6 +46,7 @@
 
   </div>
 
+  <!-- Linking game script -->
   <script type="text/javascript" src="./assets/javascript/game.js">
   </script>
 
